--- a/src/automatic-index.html
+++ b/src/automatic-index.html
@@ -96,12 +96,12 @@
 					<div class="header__row header__row--arrow">
 						<div class="header__cell">
 							<a href="#" class="down-arrows move-next-section-js">
-								<span class="down-arrow__align">
+					<span class="down-arrow__align">
 						<span>&nbsp;</span>
-								<span>&nbsp;</span>
-								<span>&nbsp;</span>
-								</span>
-							</a>
+						<span>&nbsp;</span>
+						<span>&nbsp;</span>
+					</span>
+					</a>
 						</div>
 					</div>
 				</div>
@@ -511,8 +511,362 @@
 											<div class="ea-main-section__layout">
 												<!--<div class="ea-main-section__title"><h2>Акции</h2></div>-->
 												<div class="ea-main-section__holder">
-													<div class="promo">
-														<div class="promo-slider"></div>
+													<div class="ea-promo ea-promo-slider-js">
+														<div class="ea-promo-banners ea-promo-banners-js">
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+															<img src="img/img-promo-ea-01.jpg" alt="image description" />
+														</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+															<img src="img/__temp-img-content-carousel-01.jpg" alt="image description" />
+														</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+															<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
+														</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+															<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+														</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+															<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
+														</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+															<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
+														</a>
+														</div>
+														<div class="ea-promo-thumbs ea-promo-thumbs-js">
+															<div class="ea-promo-thumbs__item"><span>Кабель ВВГ H2LS</span></div>
+															<div class="ea-promo-thumbs__item"><span>Трансформаторы ТМГ</span></div>
+															<div class="ea-promo-thumbs__item"><span>Светодиодная пан</span></div>
+															<div class="ea-promo-thumbs__item"><span>Лампа светодиод</span></div>
+															<div class="ea-promo-thumbs__item"><span>Летняя распродажа</span></div>
+															<div class="ea-promo-thumbs__item"><span>Лампа светодиод</span></div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</section>
+								<section class="ea-main-section ea-full-page-js ea-main-section--share">
+									<div class="ea-main-section__container">
+										<div class="ea-main-section__align">
+											<div class="ea-main-section__layout">
+												<div class="ea-main-section__title">
+													<h2>Акции и предложения</h2>
+												</div>
+												<div class="ea-main-section__holder">
+													<div class="share-container js-tabs" data-auto-height="true">
+														<div class="share__thumbs">
+															<div class="share-nav">
+																<div class="share-nav__item">
+																	<a href="#share-leaders" class="js-tab-anchor active-tab">Лидеры продаж</a>
+																</div>
+																<div class="share-nav__item">
+																	<a href="#share-novelties" class="js-tab-anchor">Новинки</a>
+																</div>
+															</div>
+														</div>
+														<div class="share__panels js-tab-container">
+															<div class="share__panel js-tab-content" id="share-leaders">
+																<div class="share-list share-slider-js">
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
+																				</div>
+																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">300 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-sale">%</div>
+																				<div class="share-list__label label-hit">Хит</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-02.jpg" alt="Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)" />
+																				</div>
+																				<div class="share-list__title">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 150 руб.</div>
+																				<div class="old">1 200 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-03.jpg" alt="АВВГ 4Х50" />
+																				</div>
+																				<div class="share-list__title">АВВГ 4Х50</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">300 руб.</div>
+																				<div class="old">450 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-sale">%</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-04.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 300 руб.</div>
+																				<div class="old">1 370 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-05.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
+																				</div>
+																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">2 399 руб.</div>
+																				<div class="old">3 000 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-06.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">810 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-hit">Хит</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-07.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 015 руб.</div>
+																				<div class="old">1 250 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-08.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 300 руб.</div>
+																				<div class="old">1 450 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-09.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 150 руб.</div>
+																				<div class="old">1 200 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																</div>
+															</div>
+															<div class="share__panel js-tab-content" id="share-novelties">
+																<div class="share-list share-slider-js">
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
+																				</div>
+																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">300 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-sale">%</div>
+																				<div class="share-list__label label-hit">Хит</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-02.jpg" alt="Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)" />
+																				</div>
+																				<div class="share-list__title">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 150 руб.</div>
+																				<div class="old">1 200 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-03.jpg" alt="АВВГ 4Х50" />
+																				</div>
+																				<div class="share-list__title">АВВГ 4Х50</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">300 руб.</div>
+																				<div class="old">450 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-sale">%</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-04.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 300 руб.</div>
+																				<div class="old">1 370 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-05.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
+																				</div>
+																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">2 399 руб.</div>
+																				<div class="old">3 000 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-06.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">810 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-hit">Хит</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-07.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 015 руб.</div>
+																				<div class="old">1 250 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-08.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 300 руб.</div>
+																				<div class="old">1 450 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-09.jpg" alt="АВВГ 2х10" />
+																				</div>
+																				<div class="share-list__title">АВВГ 2х10</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 150 руб.</div>
+																				<div class="old">1 200 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																</div>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -569,7 +923,10 @@
 													</div>
 													<!--news end-->
 													<div class="ea-main-section__footer">
-														<a href="#" class="btn-main--more"><span>Все новости</span></a>
+														<a href="#" class="btn-outline btn-with-icon">
+														<span>Все новости</span>
+														<i class="depict-cart">&nbsp;</i>
+													</a>
 													</div>
 												</div>
 											</div>
