--- a/src/automatic-index.html
+++ b/src/automatic-index.html
@@ -475,29 +475,19 @@
 											<div class="odds__list">
 												<div class="odds__item">
 													<div class="odds__inner">
-														<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 40 40" enable-background="new 0 0 40 40">
-														<g>
-															<path d="M16.1,3.5l-0.4-3c-0.4,0.1-0.8,0.1-1.2,0.3l0.8,2.9C15.6,3.6,15.8,3.5,16.1,3.5z M14.2,4.1C14.3,4,14.4,4,14.5,3.9   l-1.2-2.8c-0.2,0.1-0.3,0.1-0.5,0.2c-0.2,0.1-0.4,0.2-0.6,0.3l1.5,2.6C13.9,4.2,14.1,4.1,14.2,4.1z M23.3,5.4l0.9-2.9   c-0.3-0.1-0.6-0.2-0.9-0.3l-1,2.8C22.6,5.1,22.9,5.3,23.3,5.4z M37.9,3l-1.8-2.4C36,0.7,35.8,0.9,35.6,1l1.6,2.5   C37.5,3.4,37.7,3.2,37.9,3z M36.2,4.1l-1.4-2.6c-0.2,0.1-0.5,0.3-0.8,0.4l1.2,2.7C35.6,4.4,35.9,4.3,36.2,4.1z M13.1,4.7l-1.9-2.3   c-0.3,0.3-0.6,0.5-0.9,0.8l2.2,2C12.7,5.1,12.9,4.9,13.1,4.7z M25.9,2.9c-0.3-0.1-0.6-0.1-0.9-0.2l-0.7,2.9   c0.4,0.1,0.7,0.2,1.1,0.2L25.9,2.9z M34.2,5l-1-2.8c-0.3,0.1-0.6,0.2-0.9,0.3l0.8,2.9C33.5,5.3,33.8,5.1,34.2,5z M29.9,6l-0.3-3   C29.3,3,29,3,28.6,3.1l0.1,3C29.1,6,29.5,6,29.9,6z M27.7,3.1c-0.3,0-0.6,0-0.9-0.1l-0.3,3c0.4,0,0.7,0.1,1.1,0.1L27.7,3.1z    M32,5.6l-0.7-2.9c-0.3,0.1-0.6,0.1-0.9,0.2l0.5,3C31.3,5.8,31.7,5.7,32,5.6z M22.3,1.9l-1-0.4l-1,2.8l0.9,0.4L22.3,1.9z M16.9,3.4   c0.3,0,0.5,0,0.8,0.1l0.5-3c-0.4-0.1-0.8-0.1-1.2-0.1L16.9,3.4z M12.1,5.9L9.6,4.2C9.4,4.5,9.2,4.9,9,5.3l2.7,1.3   C11.8,6.4,11.9,6.1,12.1,5.9z M30.8,26.9v-5.7h-1.4v7.1h7.1v-1.4H30.8z M30.8,18.1V16h1.6v-1.4h-4.7V16h1.6v2.1   c-4.9,0.4-8.8,4.5-8.8,9.5c0,5.3,4.3,9.5,9.5,9.5s9.5-4.3,9.5-9.5C39.6,22.6,35.7,18.5,30.8,18.1z M30.1,35.8   c-4.5,0-8.1-3.7-8.1-8.1c0-4.5,3.7-8.1,8.1-8.1s8.1,3.7,8.1,8.1C38.2,32.1,34.6,35.8,30.1,35.8z M19.3,0.8l-0.8,2.9   c0.3,0.1,0.6,0.2,0.9,0.3l1-2.8C20,1,19.6,0.9,19.3,0.8z M11.4,7.4l-2.8-1C8.4,6.7,8.3,7.1,8.2,7.5l2.9,0.6   C11.2,7.9,11.3,7.6,11.4,7.4z M11,9L8,8.7C8,9.1,8,9.5,7.9,9.8l3,0C10.9,9.6,11,9.3,11,9z M15.2,13h-3.4v-2.2H6.5V13H3.1   c-1.5,0-2.7,1.2-2.7,2.7v21.1c0,1.5,1.2,2.7,2.7,2.7h12.2c1.5,0,2.7-1.2,2.7-2.7V15.7C17.9,14.2,16.7,13,15.2,13z M7.9,12.2h2.5V13   H7.9V12.2z M16.5,36.9c0,0.7-0.6,1.3-1.3,1.3H3.1c-0.7,0-1.3-0.6-1.3-1.3V15.7c0-0.7,0.6-1.3,1.3-1.3h12.2c0.7,0,1.3,0.6,1.3,1.3   V36.9z M9.2,17.4c-2,0-3.6,1.6-3.6,3.6c0,2,1.6,3.6,3.6,3.6s3.6-1.6,3.6-3.6C12.8,19.1,11.2,17.4,9.2,17.4z M9.2,23.3   c-1.2,0-2.2-1-2.2-2.2c0-1.2,1-2.2,2.2-2.2s2.2,1,2.2,2.2C11.4,22.3,10.4,23.3,9.2,23.3z M9.2,28c-2,0-3.6,1.6-3.6,3.6   c0,2,1.6,3.6,3.6,3.6s3.6-1.6,3.6-3.6C12.8,29.7,11.2,28,9.2,28z M9.2,33.9c-1.2,0-2.2-1-2.2-2.2c0-1.2,1-2.2,2.2-2.2   s2.2,1,2.2,2.2C11.4,32.9,10.4,33.9,9.2,33.9z"></path>
-														</g>
-													</svg>
+														<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448.1 448"><path d="M399.9 314.8c-3.3-2.2-8-1.4-10.3 2l-41.8 60 -29.5-24.2c-3.2-2.6-7.9-2.2-10.5 1s-2.2 7.9 1 10.5l35.8 29.3c1.3 1.1 3 1.7 4.7 1.7 0.4 0 0.7 0 1-0.1 2.1-0.3 3.9-1.4 5.1-3.1l46.4-66.7C404.2 321.8 403.3 317.1 399.9 314.8zM107.8 328.7l-5.3 5.3c-2.9 2.9-2.9 7.6 0 10.5 1.5 1.5 3.4 2.2 5.3 2.2 1.9 0 3.8-0.7 5.3-2.2l5.3-5.3c2.9-2.9 2.9-7.6 0-10.5C115.5 325.8 110.7 325.8 107.8 328.7zM67.2 215.6h-7.5c-4.1 0-7.5 3.4-7.5 7.5 0 4.1 3.4 7.5 7.5 7.5h7.5c4.1 0 7.5-3.4 7.5-7.5C74.7 219 71.3 215.6 67.2 215.6zM224 73.8c4.1 0 7.5-3.4 7.5-7.5v-7.5c0-4.1-3.4-7.5-7.5-7.5 -4.1 0-7.5 3.4-7.5 7.5v7.5C216.5 70.4 219.9 73.8 224 73.8zM224 372.4c-4.1 0-7.5 3.4-7.5 7.5v7.5c0 4.1 3.4 7.5 7.5 7.5 4.1 0 7.5-3.4 7.5-7.5v-7.5C231.5 375.8 228.1 372.4 224 372.4zM434.3 301.2c9-24.7 13.7-50.7 13.7-77.2C448 100.5 347.5 0 224 0S0 100.5 0 224s100.5 224 224 224c26.5 0 52.5-4.7 77.3-13.8 14.6 8.7 31.5 13.8 49.7 13.8 53.5 0 97.1-43.5 97.1-97.1C448.1 332.8 443 315.8 434.3 301.2zM350.9 433.1c-16.7 0-32.1-5-45-13.5 -2.8-1.8-5.3-3.7-7.8-5.8 -0.4-0.4-0.9-0.8-1.3-1.2 -1.9-1.6-3.7-3.4-5.3-5.2 -0.7-0.7-1.5-1.6-2.2-2.4 -1.3-1.5-2.6-3.1-3.8-4.7 -0.7-0.9-1.3-1.7-2-2.6 -1.5-2.2-2.9-4.5-4.3-6.8 -0.4-0.6-0.7-1.2-1-1.9 -1.3-2.4-2.4-4.8-3.4-7.2 -0.4-1-0.7-1.9-1-2.9 -0.7-1.9-1.3-4-1.9-6 -0.3-1-0.6-2.1-0.8-3.1 -0.5-2.1-0.9-4.3-1.2-6.4 -0.1-1-0.3-1.9-0.4-2.8 -0.5-3.2-0.7-6.3-0.7-9.6 0-45.3 36.8-82.1 82.1-82.1 3.2 0 6.3 0.2 9.5 0.6 1 0.1 1.9 0.3 2.8 0.4 2.2 0.3 4.3 0.7 6.4 1.2 1 0.2 2.2 0.5 3.2 0.8 2 0.5 4 1.2 6 1.9 1 0.4 1.9 0.7 2.9 1 2.5 1 4.9 2.1 7.2 3.4 0.6 0.3 1.3 0.7 1.9 1 2.3 1.3 4.6 2.7 6.8 4.3 0.9 0.6 1.8 1.3 2.6 2 1.6 1.2 3.2 2.5 4.7 3.8 0.8 0.7 1.6 1.4 2.4 2.2 1.8 1.7 3.5 3.4 5.1 5.3 0.4 0.4 0.8 0.8 1.2 1.3 2.1 2.5 4 5.1 5.8 7.8 8.6 12.9 13.6 28.4 13.6 45C433.1 396.3 396.3 433.1 350.9 433.1zM423.5 286.6c-0.6-0.7-1.3-1.3-1.9-1.9 -1.2-1.3-2.5-2.6-3.7-3.8 -1.2-1.1-2.4-2.2-3.6-3.3 -1.2-1-2.4-2-3.7-3s-2.8-2.1-4.2-3.1c-1.2-0.8-2.5-1.6-3.7-2.5 -1.5-1-3-1.9-4.5-2.8 -1.3-0.7-2.7-1.4-4-2.1 -1.5-0.7-3.1-1.6-4.6-2.2 -1.6-0.7-3.1-1.3-4.7-1.8 -1.5-0.5-2.9-1.1-4.4-1.6 -1.8-0.6-3.7-1-5.5-1.5 -1.3-0.4-2.6-0.7-4-1 -2.2-0.4-4.5-0.7-6.7-1.1 -1-0.1-2.1-0.4-3.1-0.4 -3.4-0.3-6.8-0.5-10.2-0.5 -53.5 0-97.1 43.5-97.1 97.1 0 3.4 0.2 6.9 0.5 10.2 0.1 1 0.4 2.1 0.5 3.2 0.3 2.2 0.6 4.5 1 6.7 0.3 1.3 0.7 2.7 1 4 0.4 1.9 0.9 3.7 1.5 5.5 0.4 1.5 1 3 1.6 4.5 0.6 1.6 1.1 3.1 1.8 4.6 0.7 1.6 1.5 3.1 2.2 4.6 0.7 1.3 1.3 2.7 2.1 4 0.9 1.6 1.8 3.1 2.8 4.6 0.8 1.3 1.6 2.5 2.4 3.7 1 1.4 2.1 2.8 3.1 4.2 1 1.2 1.9 2.4 2.9 3.6 1 1.3 2.2 2.5 3.3 3.7 1.2 1.3 2.5 2.5 3.7 3.7 1 0.3 1.5 1 2.2 1.6 -20.2 6.3-41.1 9.6-62.5 9.6 -115.3 0-209.1-93.8-209.1-209.1S108.7 14.9 224 14.9 433.1 108.7 433.1 224C433.1 245.4 429.9 266.3 423.5 286.6zM380.8 230.6h7.5c4.1 0 7.5-3.4 7.5-7.5 0-4.1-3.4-7.5-7.5-7.5h-7.5c-4.1 0-7.5 3.4-7.5 7.5C373.3 227.2 376.7 230.6 380.8 230.6zM335 101.7l-5.3 5.3c-2.9 2.9-2.9 7.6 0 10.5 1.4 1.4 3.2 2.2 5.2 2.2 1.9 0 3.8-0.7 5.3-2.2l5.3-5.3c2.9-2.9 2.9-7.6 0-10.5C342.6 98.8 337.9 98.8 335 101.7zM113.1 101.7c-2.9-2.9-7.6-2.9-10.5 0 -2.9 2.9-2.9 7.6 0 10.5l5.3 5.3c1.5 1.5 3.4 2.2 5.3 2.2 1.9 0 3.8-0.7 5.3-2.2 2.9-2.9 2.9-7.6 0-10.5L113.1 101.7zM231.5 194.3v-75.7c0-4.1-3.4-7.5-7.5-7.5 -4.1 0-7.5 3.4-7.5 7.5v75.7c-10.8 2.8-19.2 11.3-21.7 22.3h-53c-4.1 0-7.5 3.4-7.5 7.5 0 4.1 3.4 7.5 7.5 7.5h53.6c3.7 12.4 15 21.5 28.5 21.5 16.5 0 29.9-13.4 29.9-29.9C253.9 209.2 244.3 197.6 231.5 194.3zM224 238c-8.2 0-14.9-6.7-14.9-14.9 0-8.2 6.7-14.9 14.9-14.9 8.2 0 14.9 6.7 14.9 14.9C238.9 231.3 232.2 238 224 238z"></path></svg>
 														<div class="odds__title">Высокая скорость при выполнении заказа</div>
 													</div>
 												</div>
 												<div class="odds__item">
 													<div class="odds__inner">
-														<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 40 40" enable-background="new 0 0 40 40">
-														<g>
-															<path fill="#231F20" d="M6.6,24.1H8v-8.8H6.6V24.1z M24.8,23.5V11.2h-6.3v-1.1c0.6-0.1,1.2-0.3,1.7-0.6c0.5-0.3,0.8-0.7,0.7-1.2   c0-0.5-0.4-1-1-1.3c0.8-0.4,0.9-1,0.9-1.2S20.8,5,20,4.6c0.6-0.3,0.9-0.7,1-1.3c0-0.5-0.3-0.9-0.7-1.2c-0.5-0.3-1.2-0.5-1.7-0.6   V0.5h-1.4v1.2c-0.6,0.1-1.2,0.4-1.6,0.6c-0.5,0.3-0.9,0.7-0.8,1.2c0,0.5,0.4,1,0.9,1.2c-0.8,0.4-0.9,1-0.9,1.2   c0,0.2,0.1,0.8,0.9,1.2c-0.6,0.3-0.9,0.7-0.9,1.2c0,0.5,0.3,0.9,0.8,1.2c0.4,0.2,1,0.4,1.6,0.6v1.1h-9v-1.1C8.6,10,9.3,9.8,9.8,9.5   c0.5-0.3,0.8-0.7,0.7-1.2c0-0.5-0.4-1-1-1.3c0.8-0.4,0.9-1,0.9-1.2S10.4,5,9.6,4.6c0.6-0.3,0.9-0.7,1-1.3c0-0.5-0.3-0.9-0.7-1.2   C9.3,1.9,8.6,1.7,8.1,1.6V0.5H6.7v1.2C6.1,1.8,5.5,2,5,2.2C4.5,2.5,4.2,2.9,4.2,3.4c0,0.5,0.4,1,0.9,1.2C4.3,5,4.2,5.6,4.2,5.9   c0,0.2,0.1,0.8,0.9,1.2C4.6,7.4,4.2,7.8,4.2,8.3c0,0.5,0.3,0.9,0.8,1.2c0.4,0.2,1,0.4,1.6,0.6v1.1H0.4v16.1h13.7   c-0.4,0.4-0.8,0.7-1.1,1.1v-0.1H4.3v1.4h7.6c-1.9,2.6-3,5.7-3,9.1v0.7h11.7h7.3h11.7v-0.7C39.6,30.5,33,23.7,24.8,23.5z M16.2,8.3   C16.2,8.3,16.2,8.3,16.2,8.3c0.9-0.4,1-1,1-1.3c0-0.2-0.1-0.8-0.9-1.2c0.8-0.4,0.9-1,0.9-1.2c0-0.2-0.1-0.9-1-1.2c0,0,0,0,0,0   c0.6-0.3,1.4-0.5,1.7-0.5c0.3,0,0.9,0.2,1.5,0.5c0,0,0,0-0.1,0c-0.9,0.4-0.9,1-0.9,1.2c0,0.2,0.1,0.8,0.9,1.2   c-0.8,0.4-0.9,1-0.9,1.2c0,0.2,0.1,0.8,0.9,1.2c0,0,0,0,0.1,0c-0.5,0.3-1.2,0.5-1.5,0.5C17.5,8.8,16.8,8.6,16.2,8.3z M5.8,8.3   C5.8,8.3,5.8,8.3,5.8,8.3c0.9-0.4,1-1,1-1.3c0-0.2-0.1-0.8-0.9-1.2c0.8-0.4,0.9-1,0.9-1.2c0-0.2-0.1-0.9-1-1.2c0,0,0,0,0,0   c0.6-0.3,1.4-0.5,1.7-0.5c0.3,0,1,0.2,1.5,0.5c0,0,0,0-0.1,0C8.1,3.8,8,4.4,8,4.6c0,0.2,0.1,0.8,0.9,1.2C8.1,6.3,8,6.8,8,7.1   c0,0.2,0.1,0.8,0.9,1.2c0,0,0,0,0.1,0C8.5,8.6,7.8,8.8,7.5,8.8C7.1,8.8,6.4,8.6,5.8,8.3z M1.8,25.9V12.6h21.6v10.9   c-2.8,0.2-5.3,1-7.5,2.4v0H1.8z M22.1,38.1c0.3-0.9,1.1-1.6,2.1-1.6s1.8,0.7,2.1,1.6H22.1z M27.8,38.1c-0.1-0.5-0.3-1-0.6-1.4   l6-6.2l-1-1l-6,6.2c-0.6-0.4-1.3-0.6-2-0.6c-1.8,0-3.3,1.3-3.6,3H10.2c0.4-7.4,6.5-13.3,14-13.3s13.6,5.9,14,13.3H27.8z M18.5,15.3   h-1.4v8.8h1.4V15.3z M8.7,24.1h1.4v-8.8H8.7V24.1z M16.4,15.3H15v8.8h1.4V15.3z M12.9,24.1h1.4v-8.8h-1.4V24.1z M10.8,24.1h1.4   v-8.8h-1.4V24.1z"></path>
-														</g>
-													</svg>
+														<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 381.6 317.3"><path d="M309.5 68.9h-75.9V0H0v278.3h26.4l0.1 0.9c3.1 21.7 22 38.1 43.9 38.1 21.9 0 40.8-16.4 43.9-38.1l0.1-0.9h153l0.1 0.9c3.1 21.7 22 38.1 43.9 38.1 21.9 0 40.7-16.4 44-38.1l0.1-0.9h26.2V141.1L309.5 68.9zM11.4 81.4h113.2V56.6l51.9 51.9 -47.2 47.2h-0.1v-20H11.4V81.4zM11.4 147.1h106.4v36.3l74.9-74.9 -79.6-79.6v41H11.4V11.4h210.7v195.2H11.4V147.1zM70.3 305.8c-18.2 0-33-14.8-33-33 0-18.2 14.8-33 33-33s33 14.8 33 33S88.5 305.8 70.3 305.8zM311.4 305.8c-18.2 0-33-14.8-33-33 0-18.2 14.8-33 33-33s33 14.8 33 33S329.6 305.8 311.4 305.8zM370.2 266.8h-14.8l-0.1-0.8c-3.3-21.5-22.2-37.7-43.9-37.7 -21.8 0-40.6 16.2-44.1 37.8l-0.1 0.8h-153l-0.1-0.8c-3.3-21.5-22.2-37.7-43.9-37.7s-40.6 16.2-43.9 37.7l-0.1 0.8H11.4v-48.8h222.2V80.3h71.1l65.5 65.5V266.8zM311.4 254.2c-10.2 0-18.6 8.4-18.6 18.6s8.3 18.6 18.6 18.6c10.2 0 18.6-8.4 18.6-18.6S321.7 254.2 311.4 254.2zM311.4 280c-4 0-7.2-3.2-7.2-7.2s3.2-7.2 7.2-7.2c3.9 0 7.2 3.2 7.2 7.2S315.4 280 311.4 280zM260.8 107.3v82.3h82.3v-32.3l-50-50H260.8zM331.8 178.3h-59.5v-59.5h16.2l43.3 43.3V178.3zM70.3 254.2c-10.2 0-18.6 8.4-18.6 18.6s8.3 18.6 18.6 18.6 18.6-8.4 18.6-18.6S80.6 254.2 70.3 254.2zM70.3 280c-4 0-7.2-3.2-7.2-7.2s3.2-7.2 7.2-7.2 7.2 3.2 7.2 7.2S74.3 280 70.3 280z"></path></svg>
 														<div class="odds__title">Прямые поставки от производителя</div>
 													</div>
 												</div>
 												<div class="odds__item">
 													<div class="odds__inner">
-														<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 92.5 71.9" enable-background="new 0 0 92.5 71.9">
-														<path d="M25.8,49H6.7v13.3h19.1V49z M23.3,59.8H9.2v-8.3h14.1V59.8z M55.5,9.3H37v2.5h18.6V9.3z M37.3,60.9h3v-3h-3  V60.9z M44.7,60.9h3v-3h-3V60.9z M52.2,60.9h3v-3h-3V60.9z M52.2,28.2h3v-3h-3V28.2z M10.3,7.5h-3v3h3V7.5z M10.3,41.3v-3h-3v3H10.3  z M17.8,7.5h-3v3h3V7.5z M25.2,7.5h-3v3h3V7.5z M25.2,14.3h-3v3h3V14.3z M17.8,14.3h-3v3h3V14.3z M10.3,14.3h-3v3h3V14.3z   M25.2,41.3v-3h-3v3H25.2z M17.8,41.3v-3h-3v3H17.8z M25.5,25.9H7v2.5h18.6V25.9z M55.2,18h-3v3h3V18z M82.2,43.9h3v-3h-3V43.9z   M74.7,43.9h3v-3h-3V43.9z M77.8,33.9h-3v3h3V33.9z M85.2,33.9h-3v3h3V33.9z M85.8,51.5H66.7V64h19.1V51.5z M83.3,61.5H69.2V54h14.1  V61.5z M0,0v71.9h92.5V0H0z M30,69.4H2.5V2.5H30V69.4z M60,69.4H32.5V2.5H60V69.4z M90,69.4H62.5V2.5H90V69.4z M70.3,33.9h-3v3h3  V33.9z M85.5,25.9H67v2.5h18.6V25.9z M67.3,43.9h3v-3h-3V43.9z M55.8,34.8H36.7v12.5h19.1V34.8z M53.3,44.8H39.2v-7.5h14.1V44.8z   M47.8,18h-3v3h3V18z M37.3,28.2h3v-3h-3V28.2z M40.3,18h-3v3h3V18z M44.7,28.2h3v-3h-3V28.2z M85.2,21.1v-3h-3v3H85.2z M77.8,21.1  v-3h-3v3H77.8z M70.3,21.1v-3h-3v3H70.3z M85.5,9.3H67v2.5h18.6V9.3z"></path>
-													</svg>
+														<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 431 386.2"><path d="M163.4 240.8c18.4 0 33.4-15 33.5-33.5v-7.9c-0.7-18.1-15.3-32.3-33.5-32.3 -0.4 0-0.8 0-1.2 0 -17.5 0.6-31.7 14.8-32.3 32.3v7.9c0 18.4 15 33.4 33.5 33.5H163.4zM144.3 207.4v-8l0-0.2c0.6-10.1 8.9-18.1 19.1-18.1 0.3 0 0.7 0 1.1 0 9.7 0.5 17.5 8.3 18 18l0 0.1v8.1c0 10.5-8.6 19-19.1 19C152.9 226.4 144.3 217.9 144.3 207.4zM267.8 253.5h-0.2c-18.5 0-33.5 15.1-33.5 33.5v8.1c0 18.4 15 33.4 33.5 33.5 0 0 0 0 0 0 18.4 0 33.5-15 33.5-33.5l0-8C301.2 268.7 286.2 253.6 267.8 253.5zM286.7 295c0 10.5-8.6 19-19.1 19 -10.5 0-19-8.6-19-19.1v-7.9l0-0.2c0.8-9.9 9.1-17.6 19-17.6 0.5 0 1 0 1.5 0.1 9.5 0.7 16.8 8.1 17.6 17.6l0 0.2V295zM428.7 197.7l-87.3-82.1V30.4c0-4-3.2-7.2-7.2-7.2h-50.6c-4 0-7.2 3.2-7.2 7.2v24.1L220.4 1.9C219 0.7 217.3 0 215.5 0c-1.8 0-3.6 0.7-4.9 1.9L2.3 197.7c-2.9 2.7-3 7.3-0.3 10.2 1.4 1.4 3.3 2.3 5.2 2.3h59.2v161.7H22.9c-4 0-7.2 3.2-7.2 7.2 0 4 3.2 7.2 7.2 7.2h385.3c4 0 7.2-3.2 7.2-7.2 0-4-3.2-7.2-7.2-7.2h-43.6V210.1h59.2c1.9 0 3.7-0.8 5.1-2.1 1.4-1.4 2.1-3.2 2.1-5.1C431 200.9 430.2 199 428.7 197.7zM357.4 195.7v0c-4 0-7.2 3.2-7.2 7.2v168.9H80.8V202.9c0-4-3.2-7.2-7.2-7.2H25.4L215.5 17l63.2 59.4c1.3 1.3 3.1 1.9 4.9 1.9 2 0 3.9-0.8 5.3-2.3 1.3-1.3 1.9-3.1 1.9-4.9V37.6h36.2v81.1c0 2 0.8 3.9 2.3 5.2l76.3 71.8H357.4zM273.2 180.1c-0.2-1.9-1.2-3.6-2.7-4.8l0 0c-1.3-1-2.8-1.5-4.4-1.5 -2.3 0-4.4 1-5.7 2.8l-101.1 132.2c-1.2 1.5-1.6 3.4-1.4 5.3 0.3 1.9 1.3 3.6 2.8 4.7 1.3 0.9 2.7 1.4 4.3 1.4 2.3 0 4.4-1 5.8-2.9L271.8 185.4C273 183.9 273.5 182 273.2 180.1z"></path></svg>
 														<div class="odds__title">Выгодные цены и скидки</div>
 													</div>
 												</div>
@@ -533,12 +523,12 @@
 															</a>
 														</div>
 														<div class="ea-promo-thumbs ea-promo-thumbs-js">
-															<div class="ea-promo-thumbs__item"><span>Кабель ВВГ H2LS</span></div>
-															<div class="ea-promo-thumbs__item"><span>Трансформаторы ТМГ</span></div>
-															<div class="ea-promo-thumbs__item"><span>Светодиодная пан</span></div>
-															<div class="ea-promo-thumbs__item"><span>Лампа светодиод</span></div>
-															<div class="ea-promo-thumbs__item"><span>Летняя распродажа</span></div>
-															<div class="ea-promo-thumbs__item"><span>Лампа светодиод</span></div>
+															<div class="ea-promo-thumbs__item" title="Кабель ВВГ H2LS"><span>Кабель ВВГ H2LS</span></div>
+															<div class="ea-promo-thumbs__item" title="Трансформаторы ТМГ"><span>Трансформаторы ТМГ</span></div>
+															<div class="ea-promo-thumbs__item" title="Светодиодная панель"><span>Светодиодная панель</span></div>
+															<div class="ea-promo-thumbs__item" title="Лампа светодиод"><span>Лампа светодиод</span></div>
+															<div class="ea-promo-thumbs__item" title="Летняя распродажа"><span>Летняя распродажа</span></div>
+															<div class="ea-promo-thumbs__item" title="Лампа светодиод"><span>Лампа светодиод</span></div>
 														</div>
 													</div>
 												</div>
@@ -939,13 +929,15 @@
 											<div class="ea-main-section__layout">
 												<div class="ea-main-section__holder">
 													<div class="ea-contacts js-tabs" data-auto-height="true">
-														<div class="ea-contacts__thumbs ea-main-max-width">
-															<div class="ea-contacts-nav">
-																<div class="ea-contacts-nav__item">
-																	<a href="#contacts-by-list" class="js-tab-anchor active-tab">Списком <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 109.5 83"><path d="M5.8 11.5h98c3.2 0 5.8-2.6 5.8-5.8 0-3.2-2.6-5.8-5.8-5.8H5.8C2.6 0 0 2.6 0 5.8 0 8.9 2.6 11.5 5.8 11.5zM103.7 71.5H5.8C2.6 71.5 0 74.1 0 77.2S2.6 83 5.8 83h98c3.2 0 5.8-2.6 5.8-5.8S106.9 71.5 103.7 71.5zM103.7 35.7H5.8C2.6 35.7 0 38.3 0 41.5c0 3.2 2.6 5.8 5.8 5.8h98c3.2 0 5.8-2.6 5.8-5.8S106.9 35.7 103.7 35.7z"></path></svg></a>
-																</div>
-																<div class="ea-contacts-nav__item">
-																	<a href="#contacts-by-map" class="js-tab-anchor">На карте <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 0C153.8 0 70.6 83.2 70.6 185.4c0 126.9 165.9 313.2 173 321 6.6 7.4 18.2 7.4 24.8 0 7.1-7.9 173-194.1 173-321C441.4 83.2 358.2 0 256 0zM256 278.7c-51.4 0-93.3-41.9-93.3-93.3S204.6 92.1 256 92.1s93.3 41.9 93.3 93.3S307.4 278.7 256 278.7z"></path></svg></a>
+														<div class="ea-contacts__thumbs">
+															<div class="ea-contacts__thumbs-layout ea-main-max-width">
+																<div class="ea-contacts-nav">
+																	<div class="ea-contacts-nav__item">
+																		<a href="#contacts-by-list" class="js-tab-anchor active-tab">Списком <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 14"><path d="M0 14h16v-2H0V14zM0 0v2h16V0H0zM0 8h16V6H0V8z"></path></svg></a>
+																	</div>
+																	<div class="ea-contacts-nav__item">
+																		<a href="#contacts-by-map" class="js-tab-anchor">На карте <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 223.1 298.3"><path d="M221.2 89.4c-1.2-6.5-3.2-12.9-5.6-19.1 -5-12.4-12.3-24.1-21.2-34.1 -18-20.1-45.2-34.4-72.3-36.1 -3.6-0.2-17.1-0.2-19.9 0C96.6 0.5 91.1 1.3 85.7 2.5c-11.8 2.7-23.1 7.6-33.4 14C31.5 29.6 15.7 48.9 6.7 71.9 1.8 84.4 0 99 0 112.2c0 43.5 29.6 84.6 44.9 106.3 16 22.6 34 43.2 52.1 64.1 2.3 2.6 4.6 5.2 6.9 7.7 1.1 1.2 7.2 8 7.2 8s10.7-11.1 12.6-13.4c9-10.4 17.8-20.9 26.6-31.5 17.6-21 34.2-42.6 47.6-66.5 12.6-22.5 25.1-49.5 25.1-76C223.1 105.5 222.6 96.6 221.2 89.4zM147.6 122.8c-4.9 15.3-19.6 27.5-36.2 26.2 -18.4 1.6-34.3-13.6-37.3-31.1 -5.5-32.6 32.5-56.4 59.3-37C146.5 90.3 152.5 107.4 147.6 122.8z"></path></svg></a>
+																	</div>
 																</div>
 															</div>
 														</div>
@@ -1014,8 +1006,18 @@
 																			'lng': 131.9189,
 																			'zoom': 11
 																		},
-																		'mobile': {
+																		'tablet': {
 																			'lat': 43.1959,
+																			'lng': 132.0000,
+																			'zoom': 11
+																		},
+																		'mob': {
+																			'lat': 43.1550,
+																			'lng': 132.0000,
+																			'zoom': 11
+																		},
+																		'sm': {
+																			'lat': 43.1550,
 																			'lng': 131.9189,
 																			'zoom': 11
 																		}
@@ -3582,9 +3584,6 @@
 							</div>
 							<div class="footer-nav__col footer-add-info">
 								<div class="footer-nav__item">
-									<span class="copyright">&copy; 2017 ОАО ЭЛЕКТРОАВТОМАТИКА</span>
-								</div>
-								<div class="footer-nav__item">
 									<ul class="dl">
 										<li>
 											<div class="dt hide">Адрес:</div>
@@ -3603,6 +3602,9 @@
 											<div class="dd"><a href="mailto:info@dvemz.ru">info@ea.ru</a></div>
 										</li>
 									</ul>
+								</div>
+								<div class="footer-nav__item">
+									<span class="copyright">&copy; 2017 ОАО ЭЛЕКТРОАВТОМАТИКА</span>
 								</div>
 								<div class="footer-nav__item">
 									<strong class="dev">Дизайн сайта: <a href="http://astronim.by/">Astronim*Support</a></strong>
