--- a/src/__all-pages.html
+++ b/src/__all-pages.html
@@ -28,29 +28,30 @@
 								<h2><span class="mark">ДВЭМЗ</span></h2>
 
 								<ul>
-									<li><a href="index.html" target="_blank"><span>Главная</span></a></li>
-									<li><a href="typography.html" target="_blank"><span>Типографика</span></a></li>
-									<li><a href="catalog.html" target="_blank"><span>Каталог</span></a></li>
-									<li><a href="news-inner.html" target="_blank"><span>Новостная текстовая</span></a></li>
+									<li><a href="index.html"><span>Главная</span></a></li>
+									<li><a href="typography.html"><span>Типографика</span></a></li>
+									<li><a href="catalog.html"><span>Каталог</span></a></li>
+									<li><a href="news-inner.html"><span>Новостная текстовая</span></a></li>
 								</ul>
 
 								<h2><span class="mark">Электроавтоматика</span></h2>
 
 								<ul>
-									<li><a href="automatic-typography.html" target="_blank"><span>Типографика</span></a></li>
-									<li><a href="automatic-catalog.html" target="_blank"><span>Каталог</span></a></li>
-									<li><a href="automatic-products.html" target="_blank"><span>Список продуктов</span></a></li>
-									<li><a href="automatic-card.html" target="_blank"><span>Карточка товара</span></a></li>
-									<li><a href="automatic-news.html" target="_blank"><span>Список новостей</span></a></li>
-									<li><a href="automatic-news-inner.html" target="_blank"><span>Новостная текстовая</span></a></li>
-									<li><a href="automatic-basket.html" target="_blank"><span>Корзина</span></a></li>
-									<li><a href="automatic-personal.html" target="_blank"><span>Личный кабинет</span></a></li>
+									<li><a href="automatic-index.html"><span>Главная</span></a></li>
+									<li><a href="automatic-typography.html"><span>Типографика</span></a></li>
+									<li><a href="automatic-catalog.html"><span>Каталог</span></a></li>
+									<li><a href="automatic-products.html"><span>Список продуктов</span></a></li>
+									<li><a href="automatic-card.html"><span>Карточка товара</span></a></li>
+									<li><a href="automatic-news.html"><span>Список новостей</span></a></li>
+									<li><a href="automatic-news-inner.html"><span>Новостная текстовая</span></a></li>
+									<li><a href="automatic-basket.html"><span>Корзина</span></a></li>
+									<li><a href="automatic-personal.html"><span>Личный кабинет</span></a></li>
 								</ul>
 
 								<h2><span class="mark">Общие</span></h2>
 
 								<ul>
-									<li><a href="map-site.html" target="_blank"><span>Карта сайта (заглушка)</span></a></li>
+									<li><a href="map-site.html"><span>Карта сайта (заглушка)</span></a></li>
 								</ul>
 							</div>
 						</div>
